@@ -1,6 +1,14 @@
 2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
+	* engines/clearlooks/src/clearlooks_draw_glossy.c:
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	* engines/clearlooks/src/clearlooks_draw_inverted.c:
+	More visual fixes.
+
+2008-05-11  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_button), (clearlooks_draw_entry),
 	(clearlooks_scale_draw_gradient), (clearlooks_draw_slider):
 	Fix some bugs I introduced earlier. (This is not 100% everywhere,
